--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "axios": "^0.21.4",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "ejs-mate": "^3.0.0",
+    "express": "^4.17.1",
+    "path": "^0.12.7"
   }
 }
