--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "homepage": "https://github.com/rayhaddad717/f1#readme",
   "dependencies": {
     "axios": "^0.21.4",
+    "bcrypt": "^5.0.1",
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
-    "mssql": "^7.2.1",
+    "express-session": "^1.17.2",
+    "mongoose": "^6.0.5",
     "path": "^0.12.7"
   }
 }
